--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,14 @@
+2020-02-03  Antti Koivisto  <antti@apple.com>
+
+        Accelerated animations freeze on render tree rebuild
+        https://bugs.webkit.org/show_bug.cgi?id=201048
+        <rdar://problem/54612621>
+
+        Reviewed by Antoine Quint.
+
+        * webanimations/accelerated-animation-renderer-change-expected.html: Added.
+        * webanimations/accelerated-animation-renderer-change.html: Added.
+
 2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
 
         [ macOS wk1 ] inspector/unit-tests/server-timing-entry.html is flaky timeout
