--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,14 @@
+2020-02-04  Fujii Hironori  <Hironori.Fujii@sony.com>
+
+        [Win][Clang] WebProcessMain.h(28,14): error: token is not a valid binary operator in a preprocessor subexpression
+        https://bugs.webkit.org/show_bug.cgi?id=207188
+
+        Unreviewed build fix for WinCairo port.
+
+        * NetworkProcess/EntryPoint/win/NetworkProcessMain.cpp:
+        * WebProcess/EntryPoint/win/WebProcessMain.cpp:
+        Added #include "config.h".
+
 2020-02-03  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         Add a WebKitAdditions hook to provide additional customizations to UIDragInteraction
