[CMake] Add Cairo::Cairo target https://bugs.webkit.org/show_bug.cgi?id=207159
Reviewed by Konstantin Tokarev.

.:

* Source/cmake/FindCairo.cmake:
* Source/cmake/OptionsPlayStation.cmake:

Source/WebCore:

* PlatformWinCairo.cmake:
* platform/Cairo.cmake:

Source/WebKit:

* PlatformGTK.cmake:
* PlatformWPE.cmake:
* PlatformWin.cmake:

Source/WebKitLegacy:

* PlatformWin.cmake:

Tools:

* DumpRenderTree/PlatformWin.cmake:
* ImageDiff/Cairo.cmake:
* TestWebKitAPI/PlatformWPE.cmake:
* TestWebKitAPI/PlatformWin.cmake:
* TestWebKitAPI/glib/CMakeLists.txt:
* WebKitTestRunner/PlatformGTK.cmake:
* WebKitTestRunner/PlatformWPE.cmake:
* WebKitTestRunner/PlatformWin.cmake:
* wpe/backends/CMakeLists.txt:


Canonical link: https://commits.webkit.org/220186@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255670 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2020-02-04  Ross Kirsling  <ross.kirsling@sony.com>
+
+        [CMake] Add Cairo::Cairo target
+        https://bugs.webkit.org/show_bug.cgi?id=207159
+
+        Reviewed by Konstantin Tokarev.
+
+        * Source/cmake/FindCairo.cmake:
+        * Source/cmake/OptionsPlayStation.cmake:
+
 2020-02-02  Ting-Wei Lan  <lantw44@gmail.com>
 
         [CMake] Use opj_config.h to find OpenJPEG include directory
