--- a/Source/WebKitLegacy/ChangeLog
+++ b/Source/WebKitLegacy/ChangeLog
@@ -1,3 +1,12 @@
+2020-02-04  Ross Kirsling  <ross.kirsling@sony.com>
+
+        [CMake] Add Cairo::Cairo target
+        https://bugs.webkit.org/show_bug.cgi?id=207159
+
+        Reviewed by Konstantin Tokarev.
+
+        * PlatformWin.cmake:
+
 2020-02-03  Sihui Liu  <sihui_liu@apple.com>
 
         Crash in WebCore::IDBServer::IDBServer::createIndex
