--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,3 +1,20 @@
+2020-02-04  Ross Kirsling  <ross.kirsling@sony.com>
+
+        [CMake] Add Cairo::Cairo target
+        https://bugs.webkit.org/show_bug.cgi?id=207159
+
+        Reviewed by Konstantin Tokarev.
+
+        * DumpRenderTree/PlatformWin.cmake:
+        * ImageDiff/Cairo.cmake:
+        * TestWebKitAPI/PlatformWPE.cmake:
+        * TestWebKitAPI/PlatformWin.cmake:
+        * TestWebKitAPI/glib/CMakeLists.txt:
+        * WebKitTestRunner/PlatformGTK.cmake:
+        * WebKitTestRunner/PlatformWPE.cmake:
+        * WebKitTestRunner/PlatformWin.cmake:
+        * wpe/backends/CMakeLists.txt:
+
 2020-02-03  Jiewen Tan  <jiewen_tan@apple.com>
 
         Pass a hint from the extension to decidePolicyForSOAuthorizationLoadWithCurrentPolicy
