CSS Rules with the same selector from several large stylesheets are applied in the wrong order https://bugs.webkit.org/show_bug.cgi?id=204687 <rdar://problem/57522566>
Reviewed by Zalan Bujtas.

Source/WebCore:

Original test by Anton Khlynovskiy.

Test: fast/css/many-rules.html

* style/RuleData.h:

We overflow the 18 bit m_position field with > 256k CSS rules, confusing the rule order.
Since we have unused bits it costs nothing to increase the field size to 22 bits.

4M rules should be enough for anybody.

LayoutTests:

* TestExpectations:
* fast/css/many-rules-expected.html: Added.
* fast/css/many-rules.html: Added.


Canonical link: https://commits.webkit.org/220187@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255671 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,15 @@
+2020-02-04  Antti Koivisto  <antti@apple.com>
+
+        CSS Rules with the same selector from several large stylesheets are applied in the wrong order
+        https://bugs.webkit.org/show_bug.cgi?id=204687
+        <rdar://problem/57522566>
+
+        Reviewed by Zalan Bujtas.
+
+        * TestExpectations:
+        * fast/css/many-rules-expected.html: Added.
+        * fast/css/many-rules.html: Added.
+
 2020-02-04  youenn fablet  <youenn@apple.com>
 
         MediaDevices should handle changes of iframe allow attribute value
