--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-02-04  Jason Lawrence  <lawrence.j@apple.com>
+
+        Regression: (252234?) [ iOS wk2 ] fast/scrolling/ios/scroll-events-back-forward.html is flaky failing.
+        https://bugs.webkit.org/show_bug.cgi?id=207194
+
+        Unreviewed test gardening.
+
+        * platform/ios-wk2/TestExpectations:
+
 2020-02-04  Antti Koivisto  <antti@apple.com>
 
         CSS Rules with the same selector from several large stylesheets are applied in the wrong order
