--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,14 @@
 2020-02-04  Jason Lawrence  <lawrence.j@apple.com>
 
+        [ Mac wk2 ] webgpu/whlsl/while-loop-continue.html flaky failing.
+        https://bugs.webkit.org/show_bug.cgi?id=207200
+
+        Unreviewed test gardening.
+
+        * platform/mac-wk2/TestExpectations:
+
+2020-02-04  Jason Lawrence  <lawrence.j@apple.com>
+
         Regression: (252334?) [ iOS wk2 ] http/tests/resourceLoadStatistics/cookie-deletion.html is flaky failing and crashing.
         https://bugs.webkit.org/show_bug.cgi?id=207197
 
