--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,13 @@
+2020-02-04  youenn fablet  <youenn@apple.com>
+
+        Check for callback being null in Notification.requestPermission
+        https://bugs.webkit.org/show_bug.cgi?id=207192
+        <rdar://problem/59130804>
+
+        Reviewed by Chris Dumez.
+
+        * http/tests/notifications/notification-in-non-secure-context.html:
+
 2020-02-04  Jason Lawrence  <lawrence.j@apple.com>
 
         [ Mac wk2 ] webgpu/whlsl/while-loop-continue.html flaky failing.
