--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-02-04  Jason Lawrence  <lawrence.j@apple.com>
+
+        [ Mac wk2 ] webgpu/whlsl/textures-sample-grad.html is flaky failing.
+        https://bugs.webkit.org/show_bug.cgi?id=207202
+
+        Unreviewed test gardening.
+
+        * platform/mac-wk2/TestExpectations:
+
 2020-02-04  youenn fablet  <youenn@apple.com>
 
         Check for callback being null in Notification.requestPermission
