--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,14 @@
 2020-02-04  Jason Lawrence  <lawrence.j@apple.com>
 
+        [ macOS wk2 ] inspector/canvas/shaderProgram-add-remove-webgl2.html is flaky crashing
+        https://bugs.webkit.org/show_bug.cgi?id=206718
+
+        Unreviewed test gardening.
+
+        * platform/mac-wk2/TestExpectations:
+
+2020-02-04  Jason Lawrence  <lawrence.j@apple.com>
+
         [ Mac wk2 ] webgpu/whlsl/textures-sample-grad.html is flaky failing.
         https://bugs.webkit.org/show_bug.cgi?id=207202
 
