--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,5 +1,15 @@
 2020-02-04  Aakash Jain  <aakash_jain@apple.com>
 
+        [EWS] Do not remove TestWebKitAPI prefix from api test failures
+        https://bugs.webkit.org/show_bug.cgi?id=207210
+
+        Reviewed by Jonathan Bedard.
+
+        * BuildSlaveSupport/ews-build/steps.py:
+        (AnalyzeAPITestsResults.analyzeResults):
+
+2020-02-04  Aakash Jain  <aakash_jain@apple.com>
+
         [EWS] Do not remove webkitpy prefix from test failures
         https://bugs.webkit.org/show_bug.cgi?id=207206
 
