--- a/Source/WTF/ChangeLog
+++ b/Source/WTF/ChangeLog
@@ -1,3 +1,20 @@
+2020-02-04  Yusuke Suzuki  <ysuzuki@apple.com>
+
+        [JSC] Introduce UnlinkedCodeBlockGenerator and reduce sizeof(UnlinkedCodeBlock)
+        https://bugs.webkit.org/show_bug.cgi?id=207087
+
+        Reviewed by Tadeu Zagallo.
+
+        Add more useful methods for RefCountedArray.
+
+        * wtf/RefCountedArray.h:
+        (WTF::RefCountedArray::operator=):
+        (WTF::RefCountedArray::isEmpty const):
+        (WTF::RefCountedArray::front):
+        (WTF::RefCountedArray::front const):
+        (WTF::RefCountedArray::last):
+        (WTF::RefCountedArray::last const):
+
 2020-02-03  Alex Christensen  <achristensen@webkit.org>
 
         Reduce size of HashMap and HashSet
