Quantifiers after lookahead assertions should be syntax errors in Unicode patterns only https://bugs.webkit.org/show_bug.cgi?id=206988
Reviewed by Darin Adler and Ross Kirsling.

JSTests:

* test262/expectations.yaml: Mark 10 test cases as passing.

Source/JavaScriptCore:

This change adds SyntaxError for quantifiable assertions in Unicode patterns,
aligning JSC with V8 and SpiderMonkey.

Grammar: https://tc39.es/ecma262/#prod-annexB-Term
(/u flag precludes the use of QuantifiableAssertion)

Return value of parseParenthesesEnd() now matches with parseEscape() and
parseAtomEscape().

* yarr/YarrParser.h:
(JSC::Yarr::Parser::parseParenthesesBegin):
(JSC::Yarr::Parser::parseParenthesesEnd):
(JSC::Yarr::Parser::parseTokens):


Canonical link: https://commits.webkit.org/220205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255689 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JSTests/ChangeLog
+++ b/JSTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-02-04  Alexey Shvayka  <shvaikalesh@gmail.com>
+
+        Quantifiers after lookahead assertions should be syntax errors in Unicode patterns only
+        https://bugs.webkit.org/show_bug.cgi?id=206988
+
+        Reviewed by Darin Adler and Ross Kirsling.
+
+        * test262/expectations.yaml: Mark 10 test cases as passing.
+
 2020-02-03  Alexey Shvayka  <shvaikalesh@gmail.com>
 
         \0 identity escapes should be syntax errors in Unicode patterns only
