--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,14 @@
 2020-02-04  Jason Lawrence  <lawrence.j@apple.com>
 
+        Regression: (252273) [ Mac wk2 ] inspector/heap/getPreview.html is flaky failing.
+        https://bugs.webkit.org/show_bug.cgi?id=207209
+
+        Unreviewed test gardening.
+
+        * platform/mac-wk2/TestExpectations:
+
+2020-02-04  Jason Lawrence  <lawrence.j@apple.com>
+
         [ macOS wk2 ] inspector/canvas/shaderProgram-add-remove-webgl2.html is flaky crashing
         https://bugs.webkit.org/show_bug.cgi?id=206718
 
