--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,22 @@
+2020-02-04  Wenson Hsieh  <wenson_hsieh@apple.com>
+
+        [macCatalyst] Missing custom cursors in subframes that are offset from the origin of the root view
+        https://bugs.webkit.org/show_bug.cgi?id=207215
+        <rdar://problem/59157625>
+
+        Reviewed by Tim Horton.
+
+        <https://trac.webkit.org/r255046> added support for custom cursor styles when hovering over subframes. However,
+        we currently try to hit-test content in the subframe using the interaction information request's point, which is
+        in root view coordinates; as such, we only get the correct custom cursor styles when hovering over elements in a
+        subframe, if the subframe is also at the origin of the root view.
+
+        To fix this, simply convert from root view coordinates to frame coordinates when performing the hit-test.
+        Unfortunately, this change is currently untestable; see <rdar://problem/59158410>.
+
+        * WebProcess/WebPage/ios/WebPageIOS.mm:
+        (WebKit::lineCaretExtent):
+
 2020-02-04  Megan Gardner  <megan_gardner@apple.com>
 
         Fixed Deprecated API
