--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-02-04  Jacob Uphoff  <jacob_uphoff@apple.com>
+
+        [ macOS wk2 ] webgpu/whlsl/zero-initialize-values-2.html is a flaky failure
+        https://bugs.webkit.org/show_bug.cgi?id=207222
+
+        Unreviewed test gardening.
+
+        * platform/mac-wk2/TestExpectations:
+
 2020-02-04  Jason Lawrence  <lawrence.j@apple.com>
 
         Regression: (252273) [ Mac wk2 ] inspector/heap/getPreview.html is flaky failing.
