--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,15 @@
 2020-02-04  Jacob Uphoff  <jacob_uphoff@apple.com>
 
+        [ macOS iOS ] imported/w3c/web-platform-tests/service-workers/service-worker/extendable-event-waituntil.https.html is flaky failing
+        https://bugs.webkit.org/show_bug.cgi?id=207225
+
+        Unreviewed test gardening.
+
+        * platform/ios/TestExpectations:
+        * platform/mac/TestExpectations:
+
+2020-02-04  Jacob Uphoff  <jacob_uphoff@apple.com>
+
         [ macOS wk2 ] webgpu/whlsl/zero-initialize-values-2.html is a flaky failure
         https://bugs.webkit.org/show_bug.cgi?id=207222
 
