--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,3 +1,12 @@
+2020-02-04  Matt Lewis  <jlewis3@apple.com>
+
+        Replace bot677 due to hardware failure
+        https://bugs.webkit.org/show_bug.cgi?id=207224
+
+        Reviewed by Aakash Jain.
+
+        * BuildSlaveSupport/build.webkit.org-config/config.json:
+
 2020-02-04  Jonathan Bedard  <jbedard@apple.com>
 
         TestWebKitAPI: Handle case where test result does not contain path
