--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,3 +1,16 @@
+2020-02-04  Jonathan Bedard  <jbedard@apple.com>
+
+        results.webkit.org: Support branches in run-javascriptcore-tests
+        https://bugs.webkit.org/show_bug.cgi?id=204094
+
+        Rubber-stamped by Aakash Jain.
+
+        * Scripts/run-javascriptcore-tests:
+        (uploadResults): Use webkitdirs function to generate commit information.
+        * Scripts/VCSUtils.pm:
+        (commitForDirectory): Generate commit information for SVN repository, including
+        branch name.
+
 2020-02-04  Matt Lewis  <jlewis3@apple.com>
 
         Replace bot677 due to hardware failure
