[ macOS ] http/tests/misc/image-blocked-src-change.html is flaky failing https://bugs.webkit.org/show_bug.cgi?id=207226
Unreviewed test gardening.

Patch by Jacob Uphoff <jacob_uphoff@apple.com> on 2020-02-04

* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/220215@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255700 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,14 @@
 2020-02-04  Jacob Uphoff  <jacob_uphoff@apple.com>
 
+        [ macOS ] http/tests/misc/image-blocked-src-change.html is flaky failing
+        https://bugs.webkit.org/show_bug.cgi?id=207226
+
+        Unreviewed test gardening.
+
+        * platform/mac/TestExpectations:
+
+2020-02-04  Jacob Uphoff  <jacob_uphoff@apple.com>
+
         [ macOS iOS ] imported/w3c/web-platform-tests/service-workers/service-worker/extendable-event-waituntil.https.html is flaky failing
         https://bugs.webkit.org/show_bug.cgi?id=207225
 
